syntax = "proto3";

package version;
option go_package = "./versionpb";

message Config {
  string key = 1;
  string value = 2;
}

// deprecated: this will be deleted with https://github.com/konstellation-io/kre/issues/152
message Entrypoint {
  string proto_file = 1;
  string image = 2;
}

message Workflow {
  message Node {
    string id = 1;
    string name = 2;
    string image = 3;
    string src = 4;
    bool gpu = 5;
    int32 replicas = 6;
  }

  message Edge {
    string id = 1;
    string fromNode = 2;
    string toNode = 3;
  }

  string id = 1;
  string name = 2;
  string entrypoint = 3;
  repeated Node nodes = 4;
  repeated Edge edges = 5;
}

message StartRequest {
  string version_id = 1;
  string version_name = 2;
  repeated Config config = 3;
  repeated Workflow workflows = 4;
  string mongo_uri = 5;
  string mongo_db_name = 6;
  string mongo_krt_bucket = 7;
  string influx_uri = 8;
  Entrypoint entrypoint = 9; // deprecated: this will be deleted with https://github.com/konstellation-io/kre/issues/152
}

message VersionName {
  string name = 1;
}

message UpdateConfigRequest {
  string version_name = 1;
  repeated Config config = 2;
}

message Response {
  string message = 2;
}

message NodeStatusRequest {
  string versionName = 1;
}

message NodeStatusResponse {
  string nodeId = 1;
  string status = 2;
  string name = 3;
}

service VersionService {
  rpc Start (StartRequest) returns (Response);
  rpc Stop (VersionName) returns (Response);
  rpc Publish (VersionName) returns (Response);
  rpc Unpublish (VersionName) returns (Response);
  rpc UpdateConfig (UpdateConfigRequest) returns (Response);
  rpc WatchNodeStatus (NodeStatusRequest) returns (stream NodeStatusResponse);
};
